--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -24,7 +24,7 @@
 .Header .Menu {
   clear: both;
   max-height: 0;
-  transition: max-height .1s ease-out;
+  transition: max-height .0s ease-out;
 }
 
 .Header .MenuIcon {
